W-16546951: Batch job scope not executing second batch step with Java 17 when an SQLException is thrown an it cannot be serialised (#13920)