@@ -61,6 +61,11 @@ public final class JpmsUtils {
 
   public static final String MULE_SKIP_MODULE_TWEAKING_VALIDATION = "mule.module.tweaking.validation.skip";
 
+  private static final String MULE_JPMS_UTILS_MODULE_NAME = "org.mule.runtime.jpms.utils";
+  private static final String MULE_LAUNCHER_MODULE_NAME = "org.mule.runtime.launcher";
+  private static final String HAZELCAST_CORE_MODULE_NAME = "com.hazelcast.core";
+  private static final String KRYO_MODULE_NAME = "kryo.shaded";
+
   private static final Set<String> SERVICE_MODULE_NAME_PREFIXES =
       new HashSet<>(asList("org.mule.service.",
                            "com.mulesoft.mule.service.",
@@ -69,7 +74,7 @@ public final class JpmsUtils {
   private static final Set<String> REQUIRED_ADD_MODULES =
       new HashSet<>(asList("java.se",
                            "org.mule.boot.tanuki",
-                           "org.mule.runtime.jpms.utils",
+                           MULE_JPMS_UTILS_MODULE_NAME,
                            "com.fasterxml.jackson.core",
                            "org.apache.commons.codec"));
   private static final String REQUIRED_ADD_OPENS_JAVA_LANG =
@@ -82,6 +87,8 @@ public final class JpmsUtils {
       "--add-opens=java.base/java.nio=org.mule.runtime.jpms.utils";
   private static final String REQUIRED_ADD_OPENS_SUN_NIO_CH =
       "--add-opens=java.base/sun.nio.ch=org.mule.runtime.jpms.utils";
+  private static final String REQUIRED_ADD_OPENS_JAVA_SQL =
+      "--add-opens=java.sql/java.sql=org.mule.runtime.jpms.utils";
   private static final String REQUIRED_ADD_OPENS_SUN_MANAGEMENT =
       "--add-opens=java.management/sun.management=org.mule.runtime.jpms.utils";
   private static final String REQUIRED_ADD_OPENS_COM_IBM_LANG_MANAGEMENT_INTERNAL =
@@ -94,6 +101,7 @@ public final class JpmsUtils {
                                                                 REQUIRED_ADD_OPENS_JDK_INTERNAL_REF,
                                                                 REQUIRED_ADD_OPENS_JAVA_NIO,
                                                                 REQUIRED_ADD_OPENS_SUN_NIO_CH,
+                                                                REQUIRED_ADD_OPENS_JAVA_SQL,
                                                                 REQUIRED_ADD_OPENS_SUN_MANAGEMENT,
                                                                 REQUIRED_ADD_OPENS_COM_IBM_LANG_MANAGEMENT_INTERNAL,
                                                                 REQUIRED_ADD_OPENS_COM_SUN_MANAGEMENT_INTERNAL);
@@ -227,21 +235,23 @@ public final class JpmsUtils {
     ClassLoader childParentClassLoader = parentLayer.findLoader(parentLayer.modules().iterator().next().getName());
     final ModuleLayer childLayer =
         createModuleLayer(modulePathEntriesChild, childParentClassLoader, of(parentLayer), false, true);
-    openToModule(childLayer, "org.mule.runtime.launcher", "org.mule.boot.api",
+    openToModule(childLayer, MULE_LAUNCHER_MODULE_NAME, "org.mule.boot.api",
                  asList("org.mule.runtime.module.boot.internal"));
-    openToModule(childLayer, "kryo.shaded", "java.base",
+    openToModule(childLayer, KRYO_MODULE_NAME, "java.base",
                  asList("java.lang", "java.lang.reflect"));
-    openToModule(childLayer, "org.mule.runtime.jpms.utils", "java.base",
+    openToModule(childLayer, MULE_JPMS_UTILS_MODULE_NAME, "java.base",
                  asList("java.lang", "java.lang.reflect"));
+    openToModule(childLayer, KRYO_MODULE_NAME, "java.sql",
+                 asList("java.sql"));
 
     // To avoid a performance-related warning from Hazelcast according to
     // https://docs.hazelcast.com/hazelcast/5.2/getting-started/install-hazelcast#using-modular-java
     try {
-      openToModule(childLayer, "com.hazelcast.core", "java.base",
+      openToModule(childLayer, HAZELCAST_CORE_MODULE_NAME, "java.base",
                    asList("java.lang", "jdk.internal.ref", "java.nio", "sun.nio.ch"));
-      openToModule(childLayer, "com.hazelcast.core", "jdk.management",
+      openToModule(childLayer, HAZELCAST_CORE_MODULE_NAME, "jdk.management",
                    asList("com.sun.management.internal", "com.ibm.lang.management.internal"));
-      openToModule(childLayer, "com.hazelcast.core", "java.management",
+      openToModule(childLayer, HAZELCAST_CORE_MODULE_NAME, "java.management",
                    singletonList("sun.management"));
     } catch (IllegalCallerException e) {
       // It is fine to continue because the feature may not even be used
